# lm50client

./: .gitignore  CMakeLists.txt  ISSUES.txt  README.txt  lm50client.cnf  lm50client.kdev4
apps/: CMakeLists.txt  daemon_worker.cpp  daemon_worker.h  lm50client.cpp  lm50client.h  mode_cacti.cpp  mode_cacti.h  mode_daemon.cpp  mode_daemon.h  mode_full.cpp  mode_full.h  mode_human.cpp  mode_human.h  program_mode.h  program_options.cpp  program_options.h  worker_rrd.cpp  worker_rrd.h
cmake/Modules/: FindRRDTool.cmake
core/: CMakeLists.txt  lm50device.cpp  lm50device.h  program_options.cpp  program_options.h
etc/init.d/: lm50client
etc/lm50client/: lm50client.cnf
lib/: CMakeLists.txt  mb_ascii.cpp  mb_ascii.h  mb_base.cpp  mb_base.h  mb_constants.cpp  mb_constants.h  mb_errorres.cpp  mb_errorres.h  mb_generic.cpp  mb_generic.h  mb_rhregreq.cpp  mb_rhregreq.h  mb_rhregres.cpp  mb_rhregres.h  mb_riregreq.cpp  mb_riregreq.h  mb_riregres.cpp  mb_riregres.h  mb_tcpcomm.cpp  mb_tcpcomm.h  mb_tcprar.cpp  mb_tcprar.h  mb_typedefs.cpp  mb_typedefs.h  mb_uint16.cpp  mb_uint16.h  mb_uint32.cpp  mb_uint32.h  modbus.h  nullptr.h
patches/rrdtool/: locale-fix
